Fix grid gap css

--- a/css/main.css
+++ b/css/main.css
@@ -9,11 +9,12 @@ body {
     display: grid;
     grid-template-rows: repeat(2, 320px);
     grid-template-columns: repeat(2, 440px);
-    gap: 10px;
+    grid-gap: 10px;
     grid-template-areas:
     "smile beer"
     "tears seed";
-  }
+}
+
 .emoji:nth-child(1) {
     grid-area: smile;
 }
@@ -40,18 +41,17 @@ body {
     align-items: stretch;
 }
 
-.emoji .icon {
-    order: 1;
-    flex-basis: 20%;
-    
-}
-  
-.emoji h2 {
+h2 {
     margin: 0;
     border-bottom: 2px solid #ccc;
     font-size: 23px;
     order: 2;
     flex-basis: 100%;
+}
+
+.emoji .icon {
+    order: 1;
+    flex-basis: 20%;    
 }
 
 .emoji p {
